2024-08-20  Karl Berry  <karl@freefriends.org>

	* lists-authinfo.txt: orcid for 45:2.
	
	* capcrossref.pl: debug fix.

2024-05-15  Karl Berry  <karl@tug.org>

	* tb136capsule.txt (beet): Donald Story, not Dave W and Chuck.

2024-05-07  Karl Berry  <karl@freefriends.org>

	* capcrossref.pl (crossref_create_landing_page): do not add period
	if shortdesc ends with ? or !.
	Use &ndash; for page range.
	* crossref/README-process.txt: register earlier.
	* crossref/ltx2crossrefxml-tugboat.cfg (\meta, \YAML): new.
	(\Dash, \dash): ignore preceding whitespace.
	* tb139capsule.txt (starynovotny): need \CONNECT{}.

2024-04-28  Karl Berry  <karl@freefriends.org>

        * tb139capsule.txt: new file.
	* Makefile (testiss,lastiss,crossref_iss): tb139.
	* capaccum.pl (accumulation): also ignore four-digit hex entities.
	* lists-regexps.txt (\meta): new definition, expanding
        "&#x27e8;<i>$1</i>&#x27e9;", the mathematical angle brackets.
        (Hope font coverage is good enough.)
        (\code): also accept \tbcode.
        (\booktitle): use non-capture group (?:...) for consistency.
        * lists-translations.txt (\tubplus): +.
        * lists-unifications.txt (Garc&#xed;a&#xa0;De&#xa0;Castro):
        give Federico all his accents.

	* capout.pl (write_entries): <nobr> the page range, as breaking at
	the hyphen is irritating.
		
	* capaccum-author.pl (print_all_by_author): msg wording,
	not exactly "additional".

2024-04-13  Karl Berry  <karl@freefriends.org>

	* tb137capsule.tex (hefferon-asymptote): add Graphics as section.

2024-03-31  Karl Berry  <karl@freefriends.org>

	* crossref/ltx2crossrefxml-tugboat.cfg (\code, \tbcode): ignore
	like others.
	* lists-authinfo.txt (Bayar, Miller, Smith): orcids.

2024-01-24  Karl Berry  <karl@freefriends.org>

	* tb136capsule.txt (andre): ended up in category Typography, not Fonts.

2023-12-16  Karl Berry  <karl@freefriends.org>

	* capaccum-author.pl (output_author_list),
	* capaccum-keyword.pl (output_keyword_list),