@@ -195,6 +195,7 @@ $\Omega_2$||&#x03a9;2||O2
 \TeX\acro||TeX
 \TeX||TeX
 \textbar||| \\
+\TFM||TFM
 \TikZ||TikZ
 \TUB||<i>TUGboat</i>||TUGboat
 \tubissue||<i>TUGboat </i>||TUGboat \\
@@ -204,6 +205,7 @@ $\Omega_2$||&#x03a9;2||O2
 \TUG{}||TUG
 \UTF||UTF
 \WEB||WEB
+\Xe\,||Xe
 \XeLaTeX||XeLaTeX
 (\Xe)LaTeX||(Xe)LaTeX
 \XeTeX||XeTeX
