@@ -47,6 +47,7 @@ Conference Notes
     TUG 2021
     TUG 2022
     TUG 2023
+    TUG 2024
     TUG'98
 
 Dreamboat
@@ -388,6 +389,9 @@ Thomas Feuerstack
 Jonathan Fine
     Fine
 
+Jim Fowler
+    Fowler
+
 Katalin Fried
     Katalin Fried et al.
 
@@ -408,6 +412,9 @@ Federico Garc&#xed;a&#xa0;De&#xa0;Castro
 
 Paul Gessler
     Gessler
+
+Vincent Goulet
+    Goulet
 
 Steve Grathwohl
     Grathwohl
@@ -611,6 +618,9 @@ Kees van der Laan
 John D Lamb
     John Lamb
 
+Sarah Lang
+    Lang
+
 Olga Lapko
     O. Lapko
     Olga G. Lapko
@@ -731,6 +741,9 @@ V&#xed;t Star&#xfd;&#xa0;Novotn&#xfd;
 Janusz Nowacki
     Janusz M. Nowacki
 
+Wim Obbels
+    Obbels
+
 Eduardo Ochs
     Ochs
 
@@ -813,6 +826,9 @@ T.V. Raman
 
 Ajit Ranade
     Ranade
+
+Martin Ruckert
+    Ruckert
 
 Marek Ry&#x0107;ko
     Ry&#x0107;ko
@@ -905,6 +921,9 @@ Tony Siegman
 Karel Skoup&#xfd;
     Skoup&#xfd;
 
+Bart Snapp
+    Snapp
+
 Michael&#xa0;D. Sofka
     Michael D. Sofka
     Michael Sofka
@@ -963,6 +982,9 @@ Christina Thiele
 Damien Thiriet
     Thiriet
 
+Tyge Tiessen
+    Tiessen
+
 Georgia K.M. Tobin
     Georgia K. M. Tobin
     G.K.M. Tobin
@@ -990,6 +1012,9 @@ Enzo Ugolini
 
 Glenn Vanderburg
     Glenn L. Vanderburg
+
+Jan Van&#x011b;k
+    Van&#x011b;k
 
 S.K. Venkatesan
     SK Venkatesan
